--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -86,7 +86,8 @@
     <Reference Include="AvalonDock.Themes">
       <HintPath>..\..\_Recursos\lib\AvalonDock_DLLs_NET35\AvalonDock.Themes.dll</HintPath>
     </Reference>
-    <Reference Include="AxInterop.ShockwaveFlashObjects">
+    <Reference Include="AxInterop.ShockwaveFlashObjects, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\_Recursos\AxInterop.ShockwaveFlashObjects.dll</HintPath>
     </Reference>
     <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
@@ -332,12 +333,6 @@
     <Compile Include="_updateData\updateMDB.cs" />
     <Compile Include="util\emitter-receiver\IEmisor.cs" />
     <Compile Include="util\emitter-receiver\IReceptor.cs" />
-    <Compile Include="forms\frmErrorGuardian.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="forms\frmErrorGuardian.Designer.cs">
-      <DependentUpon>frmErrorGuardian.cs</DependentUpon>
-    </Compile>
     <Compile Include="util\ModINIs.cs" />
     <Compile Include="util\Pair.cs" />
     <Compile Include="util\OleDbFunciones.cs" />
@@ -449,9 +444,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="_updateData\fDataUpdate.resx">
       <DependentUpon>fDataUpdate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="forms\frmErrorGuardian.resx">
-      <DependentUpon>frmErrorGuardian.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="_updateData\UpdateCtl.resx">
       <DependentUpon>UpdateCtl.cs</DependentUpon>
