Correccion error al hacer busquedas. Agrego ErrorLogger al proyecto.

--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -163,6 +163,7 @@
     <Compile Include="util\errorHandling\ErrorHandler.Designer.cs">
       <DependentUpon>ErrorHandler.cs</DependentUpon>
     </Compile>
+    <Compile Include="util\errorHandling\ErrorLogger.cs" />
     <Compile Include="util\FlashControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
