--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -134,14 +134,14 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="auditoria\Auditor.cs" />
-    <Compile Include="mwViajantes.xaml.cs">
-      <DependentUpon>mwViajantes.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="forms\fReporte.cs">
+    <Compile Include="forms\frmReporte.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="forms\fReporte.Designer.cs">
-      <DependentUpon>fReporte.cs</DependentUpon>
+    <Compile Include="forms\frmReporte.designer.cs">
+      <DependentUpon>frmReporte.cs</DependentUpon>
+    </Compile>
+    <Compile Include="mwViajantes.xaml.cs">
+      <DependentUpon>mwViajantes.xaml</DependentUpon>
     </Compile>
     <Compile Include="forms\Login.cs">
       <SubType>Form</SubType>
@@ -401,8 +401,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <EmbeddedResource Include="forms\fReporte.resx">
-      <DependentUpon>fReporte.cs</DependentUpon>
+    <EmbeddedResource Include="forms\frmReporte.resx">
+      <DependentUpon>frmReporte.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="forms\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
