--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -264,6 +264,9 @@
       <DependentUpon>Reference.map</DependentUpon>
     </Compile>
     <Compile Include="_application\UpdateAppConfig.cs" />
+    <Compile Include="_novedades\Novedades.xaml.cs">
+      <DependentUpon>Novedades.xaml</DependentUpon>
+    </Compile>
     <Compile Include="_pedidos\Pedido.cs" />
     <Compile Include="_pedidos\PedidoItem.cs" />
     <Compile Include="_recibos\AplicacionItem.cs" />
@@ -363,6 +366,10 @@
       <DependentUpon>ucRecibo.cs</DependentUpon>
     </Compile>
     <Page Include="mwViajantes.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="_novedades\Novedades.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
