--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -126,7 +126,6 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="WindowsFormsIntegration" />
-    <Reference Include="WPFToolkit, Version=3.5.40128.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -150,6 +149,13 @@
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="notifications\NotificationCenter.cs" />
+    <Compile Include="reportes\InterDeposito1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>InterDeposito1.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="util\SendFileTo.cs" />
     <Compile Include="util\BackgroundTasks\BackgroundTaskBase.cs" />
     <Compile Include="util\emitter-receiver\ICancellableEmitter.cs" />
     <Compile Include="util\errorHandling\ErrorLogger.cs" />
@@ -443,6 +449,10 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="reportes\InterDeposito1.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>InterDeposito1.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="util\errorHandling\ErrorForm.resx">
       <DependentUpon>ErrorForm.cs</DependentUpon>
@@ -762,9 +772,7 @@
     <Resource Include="recursos\LOGO-ANS-16X16.ico" />
     <Resource Include="recursos\top1.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="reportes\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Resource Include="recursos\cotizacion-redes.png" />
   </ItemGroup>
