--- a/ANSv4/Catalogo4/app.config
+++ b/ANSv4/Catalogo4/app.config
@@ -8,7 +8,7 @@
     <applicationSettings>
         <Catalogo.Properties.Settings>
             <setting name="Catalogo_CatalogoWS_Info" serializeAs="String">
-                <value>http://www.autonauticasur-r.com.ar/Catalogo/Info.asmx</value>
+                <value>http://192.168.40.129/wsCatalogo4/Info.asmx</value>
             </setting>
             <setting name="Catalogo_VerExistenciaWS_VerExistencia" serializeAs="String">
                 <value>http://190.3.78.12/wsOracle/VerExistencia.asmx</value>
