--- a/ANSv4/Catalogo4/app.config
+++ b/ANSv4/Catalogo4/app.config
@@ -5,11 +5,16 @@
             <section name="Catalogo.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
+    <connectionStrings>
+        <add name="Catalogo.Properties.Settings.catalogoConnectionString"
+            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;C:\Catalogo ANS\Datos\catalogo.mdb&quot;;Password=video80min;User ID=inVent;Jet OLEDB:System database=C:\Windows\Help\kbappcat.hlp"
+            providerName="System.Data.OleDb" />
+        <add name="Catalogo.Properties.Settings.catalogoConnectionString1"
+            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\catalogo.mdb;Password=video80min;User ID=inVent;Jet OLEDB:System database=C:\Windows\Help\kbappcat.hlp"
+            providerName="System.Data.OleDb" />
+    </connectionStrings>
     <applicationSettings>
         <Catalogo.Properties.Settings>
-            <setting name="Catalogo_CatalogoWS_Info" serializeAs="String">
-                <value>http://www.autonauticasur-r.com.ar/Catalogo/Info.asmx?wsdl</value>
-            </setting>
             <setting name="Catalogo_VerExistenciaWS_VerExistencia" serializeAs="String">
                 <value>http://190.3.78.12/wsOracle/VerExistencia.asmx</value>
             </setting>
@@ -43,6 +48,9 @@
             </setting>
             <setting name="Catalogo_RendicionWS_Rendicion" serializeAs="String">
                 <value>http://190.3.78.12/wsCatalogo4/Rendicion.asmx</value>
+            </setting>
+            <setting name="Catalogo_CatalogoWS_Info" serializeAs="String">
+                <value>http://www.autonauticasur-r.com.ar/Catalogo/Info.asmx?wsdl</value>
             </setting>
         </Catalogo.Properties.Settings>
     </applicationSettings>
