--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -274,7 +274,7 @@
     <Compile Include="_novedades\Novedades.xaml.cs">
       <DependentUpon>Novedades.xaml</DependentUpon>
     </Compile>
-    <Compile Include="_novedades\NovedadesDownloader.cs" />
+    <Compile Include="util\FileDownloader.cs" />
     <Compile Include="_pedidos\Pedido.cs" />
     <Compile Include="_pedidos\PedidoItem.cs" />
     <Compile Include="_preferencias\CheckBoxINI.xaml.cs">
