--- a/ANSv4/Catalogo4/app.config
+++ b/ANSv4/Catalogo4/app.config
@@ -1,17 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Catalogo.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Catalogo.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="Catalogo.Properties.Settings.catalogoConnectionString"
-            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;C:\Catalogo ANS\Datos\catalogo.mdb&quot;;Password=video80min;User ID=inVent;Jet OLEDB:System database=C:\Windows\Help\kbappcat.hlp"
-            providerName="System.Data.OleDb" />
-        <add name="Catalogo.Properties.Settings.catalogoConnectionString1"
-            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\catalogo.mdb;Password=video80min;User ID=inVent;Jet OLEDB:System database=C:\Windows\Help\kbappcat.hlp"
-            providerName="System.Data.OleDb" />
+        <add name="Catalogo.Properties.Settings.catalogoConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;C:\Catalogo ANS\Datos\catalogo.mdb&quot;;Password=video80min;User ID=inVent;Jet OLEDB:System database=C:\Windows\Help\kbappcat.hlp" providerName="System.Data.OleDb"/>
+        <add name="Catalogo.Properties.Settings.catalogoConnectionString1" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\catalogo.mdb;Password=video80min;User ID=inVent;Jet OLEDB:System database=C:\Windows\Help\kbappcat.hlp" providerName="System.Data.OleDb"/>
     </connectionStrings>
     <applicationSettings>
         <Catalogo.Properties.Settings>
@@ -30,8 +26,7 @@
             <setting name="Catalogo_AuditWS_audit_v_304" serializeAs="String">
                 <value>http://190.3.78.12/wsCatalogo4/audit_v_304.asmx</value>
             </setting>
-            <setting name="Catalogo_ClientesNovedadesWs_ClientesNovedades"
-                serializeAs="String">
+            <setting name="Catalogo_ClientesNovedadesWs_ClientesNovedades" serializeAs="String">
                 <value>http://190.3.78.12/wsCatalogo4/ClientesNovedades.asmx</value>
             </setting>
             <setting name="Catalogo_DevolucionWS_Devolucion" serializeAs="String">
@@ -50,8 +45,8 @@
                 <value>http://190.3.78.12/wsCatalogo4/Rendicion.asmx</value>
             </setting>
             <setting name="Catalogo_CatalogoWS_Info" serializeAs="String">
-                <value>http://www.autonauticasur-r.com.ar/Catalogo/Info.asmx?wsdl</value>
+                <value>http://192.168.40.129/wsCatalogo4/Info.asmx</value>
             </setting>
         </Catalogo.Properties.Settings>
     </applicationSettings>
-</configuration>
+<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
