--- a/ANSv4/Catalogo4/Properties/Settings.settings
+++ b/ANSv4/Catalogo4/Properties/Settings.settings
@@ -52,7 +52,7 @@
       <Value Profile="(Default)">Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\catalogo.mdb;Password=video80min;User ID=inVent;Jet OLEDB:System database=C:\Windows\Help\kbappcat.hlp</Value>
     </Setting>
     <Setting Name="Catalogo_CatalogoWS_Info" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://www.autonauticasur-r.com.ar/Catalogo/Info.asmx?wsdl</Value>
+      <Value Profile="(Default)">http://192.168.40.129/wsCatalogo4/Info.asmx</Value>
     </Setting>
   </Settings>
 </SettingsFile>
