--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -289,6 +289,9 @@
     <Compile Include="_preferencias\PreferenciasFrm.xaml.cs">
       <DependentUpon>PreferenciasFrm.xaml</DependentUpon>
     </Compile>
+    <Compile Include="_productos\DetalleImagen.xaml.cs">
+      <DependentUpon>DetalleImagen.xaml</DependentUpon>
+    </Compile>
     <Compile Include="_recibos\AplicacionItem.cs" />
     <Compile Include="_recibos\DeducirItem.cs" />
     <Compile Include="_recibos\Recibo.cs" />
@@ -315,9 +318,6 @@
       <DependentUpon>ucPedido.cs</DependentUpon>
     </Compile>
     <Compile Include="_recibos\EnvioRecibo.cs" />
-    <Compile Include="_registro\Registration.xaml.cs">
-      <DependentUpon>Registration.xaml</DependentUpon>
-    </Compile>
     <Compile Include="forms\SplashScreen.cs" />
     <Compile Include="forms\SplashScreenForm.cs">
       <SubType>Form</SubType>
@@ -331,6 +331,12 @@
     <Compile Include="preload\ProductosPreloader.cs" />
     <Compile Include="util\BackgroundReader\BackgroundDataLoader.cs" />
     <Compile Include="_registro\AppRegistro.cs" />
+    <Compile Include="_registro\fRegistro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="_registro\fRegistro.designer.cs">
+      <DependentUpon>fRegistro.cs</DependentUpon>
+    </Compile>
     <Compile Include="_rendiciones\EnvioRendicion.cs" />
     <Compile Include="_rendiciones\ucRendiciones.cs">
       <SubType>UserControl</SubType>
@@ -399,9 +405,9 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="_registro\Registration.xaml">
-      <Generator>MSBuild:Compile</Generator>
+    <Page Include="_productos\DetalleImagen.xaml">
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -469,6 +475,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="_productos\FiltroSearch.resx">
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="_registro\fRegistro.resx">
+      <DependentUpon>fRegistro.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="_rendiciones\ucRendiciones.resx">
       <DependentUpon>ucRendiciones.cs</DependentUpon>
