--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -114,6 +114,8 @@
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Management" />
     <Reference Include="System.Printing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
@@ -140,6 +142,11 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="util\FlashWindow.cs" />
+    <Compile Include="Web References\UpdateNovedadesCatalogoWS\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.map</DependentUpon>
+    </Compile>
     <Compile Include="_auditor\Auditor.cs" />
     <Compile Include="forms\frmReporte.cs">
       <SubType>Form</SubType>
@@ -276,6 +283,7 @@
       <DependentUpon>Novedades.xaml</DependentUpon>
     </Compile>
     <Compile Include="util\FileDownloader.cs" />
+    <Compile Include="_novedades\UpdateNovedades.cs" />
     <Compile Include="_pedidos\Pedido.cs" />
     <Compile Include="_pedidos\PedidoItem.cs" />
     <Compile Include="_preferencias\CheckBoxINI.xaml.cs">
@@ -506,6 +514,7 @@
     </None>
     <None Include="Catalogo4_ClaveTemporal.pfx" />
     <None Include="Properties\app.manifest" />
+    <None Include="Properties\DataSources\System.Data.DataSet.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -566,6 +575,11 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
     <None Include="Web References\UpdateClientesWS\UpdateClientes.wsdl" />
+    <None Include="Web References\UpdateNovedadesCatalogoWS\catalogonovedades.wsdl" />
+    <None Include="Web References\UpdateNovedadesCatalogoWS\Reference.map">
+      <Generator>MSDiscoCodeGenerator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <None Include="Web References\VerExistenciaWS\Reference.map">
       <Generator>MSDiscoCodeGenerator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
@@ -646,6 +660,17 @@
       </CachedDynamicPropName>
       <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
       <CachedSettingsPropName>Catalogo_AuditWS_audit_v_304</CachedSettingsPropName>
+    </WebReferenceUrl>
+    <WebReferenceUrl Include="http://190.3.78.12/wscatalogo4/catalogonovedades.asmx">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\UpdateNovedadesCatalogoWS\</RelPath>
+      <UpdateFromURL>http://190.3.78.12/wscatalogo4/catalogonovedades.asmx</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>Catalogo_UpdateNovedadesCatalogoWS_CatalogoNovedades</CachedSettingsPropName>
     </WebReferenceUrl>
     <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo4/ClientesNovedades.asmx%3fwsdl">
       <UrlBehavior>Dynamic</UrlBehavior>
@@ -788,7 +813,6 @@
     <Resource Include="recursos\LOGO-ANS-16X16.ico" />
     <Resource Include="recursos\top1.png" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Resource Include="recursos\cotizacion-redes.png" />
   </ItemGroup>
@@ -815,6 +839,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="recursos\autonatica.swf" />
+    <None Include="Web References\UpdateNovedadesCatalogoWS\catalogonovedades.disco" />
     <Resource Include="recursos\icnYoutube.png" />
     <Resource Include="recursos\icnTwitter.png" />
     <Resource Include="recursos\icnLinkedin.png" />
