--- a/ANSv4/Catalogo4/Properties/Settings.settings
+++ b/ANSv4/Catalogo4/Properties/Settings.settings
@@ -35,6 +35,9 @@
     <Setting Name="Catalogo_RendicionWS_Rendicion" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">http://190.3.78.12/wsCatalogo4/Rendicion.asmx</Value>
     </Setting>
+    <Setting Name="Catalogo_CatalogoWS_Info" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://192.168.40.129/wsCatalogo4/Info.asmx</Value>
+    </Setting>
     <Setting Name="catalogoConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
@@ -51,8 +54,8 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\catalogo.mdb;Password=video80min;User ID=inVent;Jet OLEDB:System database=C:\Windows\Help\kbappcat.hlp</Value>
     </Setting>
-    <Setting Name="Catalogo_CatalogoWS_Info" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://192.168.40.129/wsCatalogo4/Info.asmx</Value>
+    <Setting Name="Catalogo_UpdateNovedadesCatalogoWS_CatalogoNovedades" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wscatalogo4/catalogonovedades.asmx</Value>
     </Setting>
   </Settings>
 </SettingsFile>
