--- a/ANSv4/Catalogo4/app.config
+++ b/ANSv4/Catalogo4/app.config
@@ -6,8 +6,12 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="Catalogo.Properties.Settings.catalogoConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;C:\Catalogo ANS\Datos\catalogo.mdb&quot;;Password=video80min;User ID=inVent;Jet OLEDB:System database=C:\Windows\Help\kbappcat.hlp" providerName="System.Data.OleDb"/>
-        <add name="Catalogo.Properties.Settings.catalogoConnectionString1" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\catalogo.mdb;Password=video80min;User ID=inVent;Jet OLEDB:System database=C:\Windows\Help\kbappcat.hlp" providerName="System.Data.OleDb"/>
+        <add name="Catalogo.Properties.Settings.catalogoConnectionString"
+            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;C:\Catalogo ANS\Datos\catalogo.mdb&quot;;Password=video80min;User ID=inVent;Jet OLEDB:System database=C:\Windows\Help\kbappcat.hlp"
+            providerName="System.Data.OleDb" />
+        <add name="Catalogo.Properties.Settings.catalogoConnectionString1"
+            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\catalogo.mdb;Password=video80min;User ID=inVent;Jet OLEDB:System database=C:\Windows\Help\kbappcat.hlp"
+            providerName="System.Data.OleDb" />
     </connectionStrings>
     <applicationSettings>
         <Catalogo.Properties.Settings>
@@ -26,7 +30,8 @@
             <setting name="Catalogo_AuditWS_audit_v_304" serializeAs="String">
                 <value>http://190.3.78.12/wsCatalogo4/audit_v_304.asmx</value>
             </setting>
-            <setting name="Catalogo_ClientesNovedadesWs_ClientesNovedades" serializeAs="String">
+            <setting name="Catalogo_ClientesNovedadesWs_ClientesNovedades"
+                serializeAs="String">
                 <value>http://190.3.78.12/wsCatalogo4/ClientesNovedades.asmx</value>
             </setting>
             <setting name="Catalogo_DevolucionWS_Devolucion" serializeAs="String">
@@ -47,6 +52,14 @@
             <setting name="Catalogo_CatalogoWS_Info" serializeAs="String">
                 <value>http://192.168.40.129/wsCatalogo4/Info.asmx</value>
             </setting>
+            <setting name="Catalogo_UpdateNovedadesCatalogoWS_CatalogoNovedades"
+                serializeAs="String">
+                <value>http://190.3.78.12/wscatalogo4/catalogonovedades.asmx</value>
+            </setting>
         </Catalogo.Properties.Settings>
     </applicationSettings>
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
+<startup><supportedRuntime version="v2.0.50727"/></startup><system.serviceModel>
+        <bindings />
+        <client />
+    </system.serviceModel>
+</configuration>
