Haciendo la tarea de background que funcione cada 10 minutos para obtener las novedades. Cuando hay novedades se dispara un evento que fuerza el refresco de la tabla de novedades.

--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -278,6 +278,7 @@
       <DependentUpon>Reference.map</DependentUpon>
     </Compile>
     <Compile Include="_application\UpdateAppConfig.cs" />
+    <Compile Include="_novedades\ChequeoNovedades.cs" />
     <Compile Include="_novedades\Novedades.xaml.cs">
       <DependentUpon>Novedades.xaml</DependentUpon>
     </Compile>
