Implementando funcionalidad de shortcuts. Implementando ciclo de shortcuts y teclado para poder hacer busquedas, y llegar a agregar productos al pedido usando exclusivamente el teclado.

--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -303,6 +303,9 @@
     <Compile Include="_preferencias\PreferenciasFrm.xaml.cs">
       <DependentUpon>PreferenciasFrm.xaml</DependentUpon>
     </Compile>
+    <Compile Include="_productos\CustomizedDataGridView.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="_productos\DetalleImagen.xaml.cs">
       <DependentUpon>DetalleImagen.xaml</DependentUpon>
     </Compile>
