nuevo estilo novedades, novedades clientes, busqueda con filtros acotada al codigo

--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -481,6 +481,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="_devoluciones\ucDevolucion.resx">
       <DependentUpon>ucDevolucion.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="_interdeposito\ucInterDeposito.resx">
       <DependentUpon>ucInterDeposito.cs</DependentUpon>
