--- a/ANSv4/Catalogo4/app.config
+++ b/ANSv4/Catalogo4/app.config
@@ -5,14 +5,7 @@
             <section name="Catalogo.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
         </sectionGroup>
     </configSections>
-    <connectionStrings>
-        <add name="Catalogo.Properties.Settings.catalogoConnectionString"
-            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;C:\Catalogo ANS\Datos\catalogo.mdb&quot;;Password=video80min;User ID=inVent;Jet OLEDB:System database=C:\Windows\Help\kbappcat.hlp"
-            providerName="System.Data.OleDb" />
-        <add name="Catalogo.Properties.Settings.catalogoConnectionString1"
-            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\catalogo.mdb;Password=video80min;User ID=inVent;Jet OLEDB:System database=C:\Windows\Help\kbappcat.hlp"
-            providerName="System.Data.OleDb" />
-    </connectionStrings>
+    <connectionStrings />
     <applicationSettings>
         <Catalogo.Properties.Settings>
             <setting name="Catalogo_VerExistenciaWS_VerExistencia" serializeAs="String">
@@ -55,8 +48,11 @@
             </setting>
         </Catalogo.Properties.Settings>
     </applicationSettings>
-<startup><supportedRuntime version="v2.0.50727"/></startup><system.serviceModel>
+<startup>
+  <supportedRuntime version="v2.0.50727"/>
+</startup>
+<system.serviceModel>
         <bindings />
         <client />
-    </system.serviceModel>
+</system.serviceModel>
 </configuration>
