creacion de un coordinador de tareas de segundo plano. Cuando la aplicacion finaliza, se cierran explicitamente todas las tareas

--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -152,6 +152,7 @@
       <DependentUpon>CrystalReport1.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="util\BackgroundTasks\BackgroundTaskCoordinator.cs" />
     <Compile Include="util\FlashWindow.cs" />
     <Compile Include="util\network\IPCache.cs" />
     <Compile Include="util\SimplePing.cs">
